# balanced-ternary

./: AGENTS.md  Cargo.toml  README.md
.changelog/: v1.2.0.md  v1.2.1.md  v2.0.0.md  v2.0.1.md  v2.1.0.md
src/: concepts.rs  conversions.rs  digit.rs  lib.rs  operations.rs  store.rs  tryte.rs
src/operations/: digit.rs
