[package]
name = "balanced-ternary"
description = "A library to manipulate balanced ternary values."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["ternary", "balanced-ternary", "base3"]
categories = ["data-structures", "mathematics", "science", "no-std"]
repository = "https://github.com/Trehinos/balanced-ternary"

[features]
default = ["tryte"]
tryte = []

[dependencies]
