[package]
name = "balanced-ternary"
description = "A library to manipulate balanced ternary values."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "1.1.0"
edition = "2021"
license = "MIT"
keywords = ["ternary", "balanced-ternary", "base3", "three-valued-logic"]
categories = ["data-structures", "mathematics", "science", "no-std"]
repository = "https://github.com/Trehinos/balanced-ternary"

[features]
default = ["tryte"]
tryte = ["ternary-string"]
ternary-string = []

[dependencies]
