[package]
name = "balanced-ternary"
description = "A library to manipulate balanced ternary values."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "1.2.0"
edition = "2021"
license = "MIT"
keywords = ["ternary", "balanced_ternary", "base3", "three_value_logic", "logic"]
categories = ["data-structures", "mathematics", "science", "no-std"]
repository = "https://github.com/Trehinos/balanced-ternary"

[features]
default = ["tryte", "ternary-store"]
ternary-store = ["ternary-string"]
tryte = ["ternary-string"]
ternary-string = []

[dependencies]
